made zoom better BUT it doesn't work on small screens :( FIX LATER!!!

--- a/main.css
+++ b/main.css
@@ -167,7 +167,13 @@ a{
 .modal-image{
     display: block;
     margin: auto;
-    width: 40%;
+    max-width: 80%;
     justify-content: center;
     align-items: center;
+}
+
+.modal-content{
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
